--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -52,7 +52,12 @@
       </div>
 
       <hr>
-
+      <footer>
+        <p><small>
+          <a href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0"/></a> &nbsp;
+          <a href="https://laura.alessandretti.com">Laura Alessandretti</a>
+         </small></p>
+      </footer>
     </div>
 
     {% include JB/analytics %}
