--- a/_layouts/luna.html
+++ b/_layouts/luna.html
@@ -1,5 +1,8 @@
 ---
-layout: default
+theme :
+  name : luna
+layout: 
+  default
 ---
 {% include JB/setup %}
-{% include themes/twitter/luna.html %}
+{% include themes/twitter/page.html %}
