--- a/_layouts/luna.html
+++ b/_layouts/luna.html
@@ -1,8 +1,6 @@
 ---
 theme :
   name : luna
-layout: 
-  default
 ---
 {% include JB/setup %}
-{% include themes/twitter/page.html %}
+{% include themes/luna/page.html %}
