--- a/_layouts/luna.html
+++ b/_layouts/luna.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: default2
 ---
 {% include JB/setup %}
-{% include themes/luna/page.html %}
+{% include themes/twitter/page.html %}
