--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,4 +3,4 @@ theme :
   name : luna
 ---
 {% include JB/setup %}
-{% include themes/luna/default.html %}
+{% include themes/twitter/default.html %}
