--- a/_layouts/luna.html
+++ b/_layouts/luna.html
@@ -1,6 +1,7 @@
 ---
 layout: luna
 ---
+{% include JB/setup %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -20,9 +21,9 @@ layout: luna
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
-    <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
-    <link href="{{ ASSET_PATH }}/css/lauale.css" rel="stylesheet" type="text/css" media="all">
+    <link href="{{ ASSET_PATH }}/luna/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
+    <link href="{{ ASSET_PATH }}/luna/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="{{ ASSET_PATH }}/luna/css/lauale.css" rel="stylesheet" type="text/css" media="all">
 
     <!-- Le fav and touch icons -->
     <link rel="SHORTCUT ICON" href="{{ BASE_PATH }}/me.ico"/>
@@ -33,12 +34,17 @@ layout: luna
   </head>
 
   <body>
-
+    <div class="container">
+        <div class="night-sky"></div>
+        <div class="stars"></div>
+        <div class="stars2"></div>
+        <div class="stars3"></div>
     <div class="container-narrow">
 
       <div class="content">
         {{ content }}
       </div>
+    </div>
 
       <hr>
       <footer>
