--- a/_layouts/luna.html
+++ b/_layouts/luna.html
@@ -20,6 +20,8 @@ layout: luna
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+
     <!-- Le styles -->
     <link href="{{ ASSET_PATH }}/luna/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/luna/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
@@ -34,17 +36,11 @@ layout: luna
   </head>
 
   <body>
-    <div class="container">
-        <div class="night-sky"></div>
-        <div class="stars"></div>
-        <div class="stars2"></div>
-        <div class="stars3"></div>
-    <div class="container-narrow">
 
+    <div class="container-narrow">
       <div class="content">
         {{ content }}
       </div>
-    </div>
 
       <hr>
       <footer>
