--- a/_layouts/luna.html
+++ b/_layouts/luna.html
@@ -37,6 +37,10 @@ layout: luna
 
   <body>
 
+    <div class="container-narrow">
+      <div class="content">
+        {{ content }}
+      </div>
 
     {% include JB/analytics %}
   </body>
